--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </p>
 
           <p>
-            Ce site vous permet de consulter mon portfolio, mon CV, une vidéo de présentation ainsi que mes profils professionnels.
+            Ce site vous permet de consulter mon portfolio, mon CV ainsi que mes profils professionnels.
           </p>
         </section>
 
@@ -449,8 +449,8 @@
               <p>Git</p>
             </div>
 
-            <div class="tool-card">
-              <img src="C:\Users\gen97\Documents\Porfolio_EMMANUEL_GRONDIN\assets\images\hd-cisco-logo-transparent-background-701751694708614msmscwyuoe.png" style="width: 40px; height: 40px;" alt="Cisco Logo">
+             <div class="tool-card">
+              <img src="https://cdn.simpleicons.org/cisco/1BA0D7" style="width: 40px; height: 40px;" alt="Cisco">
               <p>Cisco</p>
             </div>
 
