--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
 
         <section class="about-text">
           <p>
+            Bienvenue sur mon portfolio ! Explorez mon univers où la cybersécurité et les réseaux se rencontrent pour créer des solutions innovantes et sécurisées.
+          </p>
+          <p>
             Emmanuel Grondin je suis étudiant en 3ème année de BUT Réseaux &amp; Télécommunications, avec une spécialisation en cybersécurité.
             Passionné par les réseaux, la sécurité informatique et l'intelligence artificielle, j'aime améliorer mes compétences à travers des projets concrets et des challenges techniques.
           </p>
@@ -930,7 +933,7 @@
               </button>
             </div>
             <div class="pdf-modal-content">
-              <embed id="pdfViewer" type="application/pdf" width="100%" height="600px">
+              <embed id="pdfViewer" type="application/pdf" width="100%" height="100%">
             </div>
             <div class="pdf-modal-footer">
               <a id="pdfDownloadBtn" href="#" download class="form-btn" style="text-decoration: none; display: inline-flex; align-items: center; gap: 8px;">
