--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
 
         <section class="about-text">
           <p>
-            Bienvenue sur mon portfolio ! Explorez mon univers où la cybersécurité et les réseaux se rencontrent pour créer des solutions innovantes et sécurisées.
+            Bienvenue sur mon portfolio. Cet espace présente un parcours orienté réseaux et cybersécurité, avec une approche axée sur des solutions fiables et sécurisées.
           </p>
           <p>
-            Emmanuel Grondin je suis étudiant en 3ème année de BUT Réseaux &amp; Télécommunications, avec une spécialisation en cybersécurité.
-            Passionné par les réseaux, la sécurité informatique et l'intelligence artificielle, j'aime améliorer mes compétences à travers des projets concrets et des challenges techniques.
+            Étudiant en 3ᵉ année de BUT Réseaux &amp; Télécommunications, spécialisation cybersécurité, je suis actuellement à la recherche d’opportunités de stage.
+            Intéressé par les réseaux, la sécurité informatique et l’intelligence artificielle, je développe mes compétences à travers des projets concrets et des défis techniques.
           </p>
 
           <p>
