--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
                   </div>
                   <img src="./SAE101.png" alt="projet 101" loading="lazy">
                 </figure>
-                <h3 class="project-title">SAE 1.01 - Sensibilisation Cybersécurité</h3>
+                <h3 class="project-title">Certification Mooc anssi</h3>
                 <p class="project-category">Cyber</p>
               </a>
             </li>
@@ -833,7 +833,7 @@
             </li>
 
             <li class="project-item" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf="./rapport/SAE304 Rapport-Writeups_CTF_Emmanuel-GRONDIN.pdf" data-title="SAE 304 - Writeups CTF">
+              <a href="#" class="project-link" data-pdf="./rapport/SAE304 Rapport-Writeups_CTF_Emmanuel-GRONDIN (4) (1)" data-title="SAE 304 - Writeups CTF">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -847,7 +847,7 @@
             </li>
 
             <li class="project-item" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf="./rapport/SAE304 Emmanuel_GRONDIN_machines_vulnerables.pdf" data-title="SAE 304 - Machines Vulnérables">
+              <a href="#" class="project-link" data-pdf="./rapport/SAE304 Emmanuel_GRONDIN(machines vulnérables - deuxieme vague) (2).pdf" data-title="SAE 304 - Machines Vulnérables">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
