--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
             </li>
 
             <li class="project-item" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf=".\rapport\SAE304 Rapport-Writeups_CTF_Emmanuel-GRONDIN (4) (1).pdf" data-title="SAE 304 - Writeups CTF">
+              <a href="#" class="project-link" data-pdf="./rapport/SAE304_/SAE304 Rapport-Writeups_CTF_Emmanuel-GRONDIN (4) (1).pdf" data-title="SAE 304 - Writeups CTF">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
