--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
             </li>
 
             <li class="project-item" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf="C:\Users\gen97\Documents\GitHub\gen97490-gif.github.io\rapport\SAE304 Rapport-Writeups_CTF_Emmanuel-GRONDIN.pdf" data-title="SAE 304 - Writeups CTF">
+              <a href="#" class="project-link" data-pdf="./rapport/SAE 304 MANU.pdf" data-title="SAE 304 - Writeups CTF">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
