--- a/index.html
+++ b/index.html
@@ -724,105 +724,105 @@
           <ul class="project-list">
 
             <li class="project-item active" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf="./rapport/SAE 101 Mooc anssi.pdf" data-title="SAE 1.01 - Sensibilisation Cybersécurité">
+              <a href="#" class="project-link" data-pdf="./rapport/SAE 101 Mooc anssi.pdf" data-title="Certification ANSSI - Hygiène Informatique">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="./SAE101.png" alt="projet 101" loading="lazy">
                 </figure>
-                <h3 class="project-title">Certification Mooc anssi</h3>
+                <h3 class="project-title">Certification ANSSI - Hygiène Informatique</h3>
                 <p class="project-category">Cyber</p>
               </a>
             </li>
 
             <li class="project-item active" data-filter-item data-category="réseaux">
-              <a href="#" class="project-link" data-pdf="./rapport/Compte_rendu.pdf" data-title="SAE 1.02 - Initiation Réseaux">
+              <a href="#" class="project-link" data-pdf="./rapport/Compte_rendu.pdf" data-title="Conception & Déploiement Réseau LAN">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="./SAE102.png" alt="projet 102" loading="lazy">
                 </figure>
-                <h3 class="project-title">SAE 1.02 - Initiation Réseaux</h3>
+                <h3 class="project-title">Conception & Déploiement Réseau LAN</h3>
                 <p class="project-category">Réseaux</p>
               </a>
             </li>
 
             <li class="project-item active" data-filter-item data-category="autre">
-              <a href="#" class="project-link" data-pdf="./rapport/SAE 202Rapport_audit_de_couverture_WIFI_Emmanuel_GRONDIN_et Benoit_Dijoux..pdf" data-title="SAE 1.03 - Réseaux & Protocoles">
+              <a href="#" class="project-link" data-pdf="./rapport/SAE 202Rapport_audit_de_couverture_WIFI_Emmanuel_GRONDIN_et Benoit_Dijoux..pdf" data-title="Audit Wi-Fi & Analyse Protocolaire">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="./SAE103.png" alt="projet 103" loading="lazy">
                 </figure>
-                <h3 class="project-title">SAE 1.03 - Réseaux & Protocoles</h3>
+                <h3 class="project-title">Audit Wi-Fi & Analyse Protocolaire</h3>
                 <p class="project-category">Autre</p>
               </a>
             </li>
 
             <li class="project-item" data-filter-item data-category="réseaux">
-              <a href="#" class="project-link" data-pdf="./SAE_201_Emmanuel.GRONDIN_et_Yann.BOISVILLIERS_Compte_Rendu.pdf" data-title="SAE 2.01 - Admin Réseau & Services">
+              <a href="#" class="project-link" data-pdf="./SAE_201_Emmanuel.GRONDIN_et_Yann.BOISVILLIERS_Compte_Rendu.pdf" data-title="Administration Système & Services Réseaux">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="./SAE201.png" alt="projet 201" loading="lazy">
                 </figure>
-                <h3 class="project-title">SAE 2.01 - Admin Réseau & Services</h3>
+                <h3 class="project-title">Administration Système & Services Réseaux</h3>
                 <p class="project-category">Réseaux</p>
               </a>
             </li>
 
             <li class="project-item" data-filter-item data-category="autre">
-              <a href="#" class="project-link" data-pdf="./rapport/CR_SAE202_ALAMELOU_Rohan_BOUGHLEM_Bilel_GRONDIN_Emmanuel.pdf" data-title="SAE 2.02 - Mesures Physiques">
+              <a href="#" class="project-link" data-pdf="./rapport/CR_SAE202_ALAMELOU_Rohan_BOUGHLEM_Bilel_GRONDIN_Emmanuel.pdf" data-title="Analyse Physique des Signaux & Transmission">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="./SAE202.png" alt="projet 202" loading="lazy">
                 </figure>
-                <h3 class="project-title">SAE 2.02 - Mesures Physiques</h3>
+                <h3 class="project-title">Analyse Physique des Signaux & Transmission</h3>
                 <p class="project-category">Autre</p>
               </a>
             </li>
 
             <li class="project-item" data-filter-item data-category="autre">
-              <a href="#" class="project-link" data-pdf="./rapport/SAE 203 TP7_Emmanuel-GRONDIN_Djibrill-GAGE_ Analyse_d'un système_de_gestion_de_commandes.pdf" data-title="SAE 2.03 - Installation & Audit">
+              <a href="#" class="project-link" data-pdf="./rapport/SAE 203 TP7_Emmanuel-GRONDIN_Djibrill-GAGE_ Analyse_d'un système_de_gestion_de_commandes.pdf" data-title="Audit de Conformité & Installation de Services">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="./SAE203.jpg" alt="projet 203" loading="lazy">
                 </figure>
-                <h3 class="project-title">SAE 2.03 - Installation & Audit</h3>
+                <h3 class="project-title">Audit de Conformité & Installation de Services</h3>
                 <p class="project-category">Autre</p>
               </a>
             </li>
 
             <li class="project-item" data-filter-item data-category="réseaux">
-              <a href="#" class="project-link" data-pdf="./SAE2.04_Projet_Integratif_brice_bernardin_hugues_chane-yin_grondin_emmanuel.pdf" data-title="SAE 2.04 - Architecture Réseau">
+              <a href="#" class="project-link" data-pdf="./SAE2.04_Projet_Integratif_brice_bernardin_hugues_chane-yin_grondin_emmanuel.pdf" data-title="Architecture Réseau Haute Disponibilité">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="./SAE204.jpeg" alt="projet 204" loading="lazy">
                 </figure>
-                <h3 class="project-title">SAE 2.04 - Architecture Réseau</h3>
+                <h3 class="project-title">Architecture Réseau Haute Disponibilité</h3>
                 <p class="project-category">Réseaux</p>
               </a>
             </li>
 
             <li class="project-item" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf="./SAE3.CYBER.03_Concevoir un réseau sécurisé_DIJOUX-BENOIT_GRONDIN-EMMANUEL_BOISVILLIERS-YANN.pdf" data-title="SAE 3.03 - Conception Réseau Sécurisé">
+              <a href="#" class="project-link" data-pdf="./SAE3.CYBER.03_Concevoir un réseau sécurisé_DIJOUX-BENOIT_GRONDIN-EMMANUEL_BOISVILLIERS-YANN.pdf" data-title="Architecture & Sécurisation d'Infrastructure">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
                   <img src="./SAE 303.webp" alt="projet 303" loading="lazy">
                 </figure>
-                <h3 class="project-title">SAE 3.03 - Conception Réseau Sécurisé</h3>
+                <h3 class="project-title">Architecture & Sécurisation d'Infrastructure</h3>
                 <p class="project-category">Cyber</p>
               </a>
             </li>
@@ -830,7 +830,7 @@
             <!-- Nouveaux Projets Cyber -->
 
             <li class="project-item" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf="./rapport/TP_Wazuh_CYBER_Boisvilliers_Yann_Grondin_Emmanuel.pdf" data-title="TP Wazuh - SIEM & Monitoring">
+              <a href="#" class="project-link" data-pdf="./rapport/TP_Wazuh_CYBER_Boisvilliers_Yann_Grondin_Emmanuel.pdf" data-title="Mise en place d'un SIEM (Wazuh) & Supervision">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -838,13 +838,13 @@
                   <!-- PLACEHOLDER IMAGE -->
                   <img src="./assets/images/wazuh.png" alt="TP Wazuh" loading="lazy" style="background: #333;">
                 </figure>
-                <h3 class="project-title">TP Wazuh - SIEM & Monitoring</h3>
+                <h3 class="project-title">Mise en place d'un SIEM (Wazuh) & Supervision</h3>
                 <p class="project-category">Cyber</p>
               </a>
             </li>
 
             <li class="project-item" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf="./rapport/SAE 304 MANU.pdf" data-title="SAE 304 - Writeups CTF">
+              <a href="#" class="project-link" data-pdf="./rapport/SAE 304 MANU.pdf" data-title="Rapport d'Investigation & Challenges CTF">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -852,13 +852,13 @@
                   <!-- PLACEHOLDER IMAGE -->
                   <img src="./assets/images/kali.jpg" alt="SAE 304 CTF" loading="lazy" style="background: #333;">
                 </figure>
-                <h3 class="project-title">SAE 304 - Writeups CTF</h3>
+                <h3 class="project-title">Rapport d'Investigation & Challenges CTF</h3>
                 <p class="project-category">Cyber</p>
               </a>
             </li>
 
             <li class="project-item" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf="./rapport/SAE304 Emmanuel_GRONDIN(machines vulnérables - deuxieme vague) (2).pdf" data-title="SAE 304 - Machines Vulnérables">
+              <a href="#" class="project-link" data-pdf="./rapport/SAE304 Emmanuel_GRONDIN(machines vulnérables - deuxieme vague) (2).pdf" data-title="Pentesting & Audit de Vulnérabilités">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -866,13 +866,13 @@
                   <!-- PLACEHOLDER IMAGE -->
                   <img src="./assets/images/Kali-Linux-distribution-linux-1024x666.webp" alt="SAE 304 Machines" loading="lazy" style="background: #333;">
                 </figure>
-                <h3 class="project-title">SAE 304 - Machines Vulnérables</h3>
+                <h3 class="project-title">Pentesting & Audit de Vulnérabilités</h3>
                 <p class="project-category">Cyber</p>
               </a>
             </li>
 
             <li class="project-item" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf="./rapport/Audit_Securite_Complet_Emmanuel_GRONDIN.pdf" data-title="Audit de Sécurité Complet">
+              <a href="#" class="project-link" data-pdf="./rapport/Audit_Securite_Complet_Emmanuel_GRONDIN.pdf" data-title="Audit de Sécurité Organisationnel & Technique">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -880,13 +880,13 @@
                   <!-- PLACEHOLDER IMAGE -->
                   <img src="./assets/images/audit.png" alt="Audit Sécurité" loading="lazy" style="background: #333;">
                 </figure>
-                <h3 class="project-title">Audit de Sécurité Complet</h3>
+                <h3 class="project-title">Audit de Sécurité Organisationnel & Technique</h3>
                 <p class="project-category">Cyber</p>
               </a>
             </li>
 
             <li class="project-item" data-filter-item data-category="cyber">
-              <a href="#" class="project-link" data-pdf="./rapport/2025-R4.Cyber.11_TP1_Emmanuel-GRONDIN.pdf" data-title="R4.Cyber.11 - Sécurisation Services">
+              <a href="#" class="project-link" data-pdf="./rapport/2025-R4.Cyber.11_TP1_Emmanuel-GRONDIN.pdf" data-title="Hardening & Sécurisation des Services Critiques">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -894,7 +894,7 @@
                   <!-- PLACEHOLDER IMAGE -->
                   <img src="./assets/images/network-security-levels-what-is.jpg" alt="R4 Cyber 11" loading="lazy" style="background: #333;">
                 </figure>
-                <h3 class="project-title">R4.Cyber.11 - Sécurisation Services</h3>
+                <h3 class="project-title">Hardening & Sécurisation des Services Critiques</h3>
                 <p class="project-category">Cyber</p>
               </a>
             </li>
@@ -902,7 +902,7 @@
             <!-- Nouveaux Projets Docker -->
 
             <li class="project-item" data-filter-item data-category="docker">
-              <a href="#" class="project-link" data-pdf="./rapport/GRONDIN-Emmanuel-BUT3-TP1_docker.pdf" data-title="TP1 Docker">
+              <a href="#" class="project-link" data-pdf="./rapport/GRONDIN-Emmanuel-BUT3-TP1_docker.pdf" data-title="Déploiement d'Infrastructure Conteneurisée">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -910,13 +910,13 @@
                   <!-- PLACEHOLDER IMAGE -->
                   <img src="./assets/images/grafana.png" alt="TP1 Docker" loading="lazy" style="background: #333;">
                 </figure>
-                <h3 class="project-title">TP1 Docker</h3>
+                <h3 class="project-title">Déploiement d'Infrastructure Conteneurisée</h3>
                 <p class="project-category">Docker</p>
               </a>
             </li>
 
             <li class="project-item" data-filter-item data-category="docker">
-              <a href="#" class="project-link" data-pdf="./rapport/GRONDIN-Emmanuel-BUT3-TP2_docker.pdf" data-title="TP2 Docker">
+              <a href="#" class="project-link" data-pdf="./rapport/GRONDIN-Emmanuel-BUT3-TP2_docker.pdf" data-title="Orchestration de Conteneurs & Micro-services">
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
@@ -924,7 +924,7 @@
                   <!-- PLACEHOLDER IMAGE -->
                   <img src="./assets/images/docker.jpg" alt="TP2 Docker" loading="lazy" style="background: #333;">
                 </figure>
-                <h3 class="project-title">TP2 Docker</h3>
+                <h3 class="project-title">Orchestration de Conteneurs & Micro-services</h3>
                 <p class="project-category">Docker</p>
               </a>
             </li>
