--- a/index.html
+++ b/index.html
@@ -733,6 +733,7 @@
                 </figure>
                 <h3 class="project-title">Certification ANSSI - Hygiène Informatique</h3>
                 <p class="project-category">Cyber</p>
+                <p class="project-description">Formation aux bonnes pratiques de l'ANSSI : sécurisation des postes de travail, gestion des mots de passe et protection des données sensibles.</p>
               </a>
             </li>
 
@@ -746,6 +747,7 @@
                 </figure>
                 <h3 class="project-title">Conception & Déploiement Réseau LAN</h3>
                 <p class="project-category">Réseaux</p>
+                <p class="project-description">Architecture et déploiement d'un réseau local d'entreprise : adressage VLSM, configuration de commutateurs/routeurs Cisco et segmentation VLAN.</p>
               </a>
             </li>
 
@@ -759,6 +761,7 @@
                 </figure>
                 <h3 class="project-title">Audit Wi-Fi & Analyse Protocolaire</h3>
                 <p class="project-category">Autre</p>
+                <p class="project-description">Audit de couverture et analyse de spectre Wi-Fi. Étude des protocoles 802.11 et optimisation de la qualité de service (QoS) sans fil.</p>
               </a>
             </li>
 
@@ -772,6 +775,7 @@
                 </figure>
                 <h3 class="project-title">Administration Système & Services Réseaux</h3>
                 <p class="project-category">Réseaux</p>
+                <p class="project-description">Déploiement et configuration de services essentiels (DNS, DHCP, Web) sur environnements Linux et Windows Server.</p>
               </a>
             </li>
 
@@ -785,6 +789,7 @@
                 </figure>
                 <h3 class="project-title">Analyse Physique des Signaux & Transmission</h3>
                 <p class="project-category">Autre</p>
+                <p class="project-description">Analyse physique des transmissions : étude de la propagation des signaux sur fibre optique et cuivre, diagnostic de la couche physique.</p>
               </a>
             </li>
 
@@ -798,6 +803,7 @@
                 </figure>
                 <h3 class="project-title">Audit de Conformité & Installation de Services</h3>
                 <p class="project-category">Autre</p>
+                <p class="project-description">Audit de conformité d'une infrastructure : installation sécurisée de services, vérification des configurations et hardening système.</p>
               </a>
             </li>
 
@@ -811,6 +817,7 @@
                 </figure>
                 <h3 class="project-title">Architecture Réseau Haute Disponibilité</h3>
                 <p class="project-category">Réseaux</p>
+                <p class="project-description">Conception d'une architecture réseau haute disponibilité (HA) : redondance des liens, protocoles de tolérance aux pannes (HSRP/VRRP).</p>
               </a>
             </li>
 
@@ -824,6 +831,7 @@
                 </figure>
                 <h3 class="project-title">Architecture & Sécurisation d'Infrastructure</h3>
                 <p class="project-category">Cyber</p>
+                <p class="project-description">Sécurisation périmétrique et interne : mise en place de pare-feux, segmentation réseau avancée et contrôle d'accès strict.</p>
               </a>
             </li>
 
@@ -840,6 +848,7 @@
                 </figure>
                 <h3 class="project-title">Mise en place d'un SIEM (Wazuh) & Supervision</h3>
                 <p class="project-category">Cyber</p>
+                <p class="project-description">Implémentation d'un SOC/SIEM avec Wazuh : centralisation des logs, détection d'intrusions en temps réel et réponse aux incidents.</p>
               </a>
             </li>
 
@@ -854,6 +863,7 @@
                 </figure>
                 <h3 class="project-title">Rapport d'Investigation & Challenges CTF</h3>
                 <p class="project-category">Cyber</p>
+                <p class="project-description">Investigation numérique et réponse à incident : analyse forensique, résolution de challenges CTF (Capture The Flag) et rapport d'incident.</p>
               </a>
             </li>
 
@@ -868,6 +878,7 @@
                 </figure>
                 <h3 class="project-title">Pentesting & Audit de Vulnérabilités</h3>
                 <p class="project-category">Cyber</p>
+                <p class="project-description">Tests d'intrusion (Pentesting) : identification et exploitation de vulnérabilités (Web, Système) pour évaluer la robustesse des défenses.</p>
               </a>
             </li>
 
@@ -882,6 +893,7 @@
                 </figure>
                 <h3 class="project-title">Audit de Sécurité Organisationnel & Technique</h3>
                 <p class="project-category">Cyber</p>
+                <p class="project-description">Audit de sécurité global : analyse de risques (EBIOS), audit organisationnel et technique, et recommandations de remédiation.</p>
               </a>
             </li>
 
@@ -896,6 +908,7 @@
                 </figure>
                 <h3 class="project-title">Hardening & Sécurisation des Services Critiques</h3>
                 <p class="project-category">Cyber</p>
+                <p class="project-description">Durcissement (Hardening) des services critiques : sécurisation des configurations, gestion des correctifs et réduction de la surface d'attaque.</p>
               </a>
             </li>
 
@@ -912,6 +925,7 @@
                 </figure>
                 <h3 class="project-title">Déploiement d'Infrastructure Conteneurisée</h3>
                 <p class="project-category">Docker</p>
+                <p class="project-description">Conteneurisation d'applications : création d'images Docker optimisées, gestion des volumes et réseaux pour des déploiements agiles.</p>
               </a>
             </li>
 
@@ -926,6 +940,7 @@
                 </figure>
                 <h3 class="project-title">Orchestration de Conteneurs & Micro-services</h3>
                 <p class="project-category">Docker</p>
+                <p class="project-description">Orchestration de conteneurs : déploiement de stacks multi-services avec Docker Compose, gestion de la scalabilité et de la persistance.</p>
               </a>
             </li>
 
