--- a/index.html
+++ b/index.html
@@ -245,6 +245,17 @@
           <p>
             Ce site vous permet de consulter mon portfolio, mon CV ainsi que mes profils professionnels.
           </p>
+
+          <h3 class="h3" style="margin-top: 30px; margin-bottom: 15px;">Ce que mon parcours dit de moi</h3>
+          <p>
+            Mon portfolio illustre ma transition d'étudiant en réseaux vers un profil d'expert en sécurité des infrastructures. 
+            Au fil de mes trois années de BUT, j'ai développé une conviction : la sécurité ne se superpose pas au réseau, elle en est la fondation.
+          </p>
+          <p>
+            À travers mes projets (SIEM, Pentesting, Stage chez NXO), je démontre ma capacité à allier la rigueur de l'administration système 
+            à la proactivité de la cybersécurité. Mon ambition est désormais de franchir une nouvelle étape en intégrant l'Intelligence Artificielle 
+            dans les stratégies de défense, un projet que je concrétiserai lors de mon stage de recherche à Bristol.
+          </p>
         </section>
 
 
@@ -976,6 +987,52 @@
               <div class="contact-info">
                 <p class="contact-title">Localisation</p>
                 <address style="color: var(--white-2); font-style: normal;">Saint Denis, Réunion 97490</address>
+              </div>
+            </li>
+
+          </ul>
+
+        </section>
+
+        <section class="hobbies-section" style="margin-bottom: 30px;">
+
+          <h3 class="h3 article-title">Centres d'intérêt</h3>
+
+          <ul class="service-list">
+
+            <li class="service-item">
+              <div class="service-icon-box">
+                <ion-icon name="football-outline" style="font-size: 40px; color: var(--crimson-red);"></ion-icon>
+              </div>
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Football</h4>
+                <p class="service-item-text">
+                  Esprit d'équipe et compétition. Pratique régulière en club, développant résilience et cohésion.
+                </p>
+              </div>
+            </li>
+
+            <li class="service-item">
+              <div class="service-icon-box">
+                <ion-icon name="walk-outline" style="font-size: 40px; color: var(--crimson-red);"></ion-icon>
+              </div>
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Randonnée</h4>
+                <p class="service-item-text">
+                  Exploration des sentiers de La Réunion. Une activité qui renforce la persévérance et permet de se ressourcer.
+                </p>
+              </div>
+            </li>
+
+            <li class="service-item">
+              <div class="service-icon-box">
+                <ion-icon name="desktop-outline" style="font-size: 40px; color: var(--crimson-red);"></ion-icon>
+              </div>
+              <div class="service-content-box">
+                <h4 class="h4 service-item-title">Informatique</h4>
+                <p class="service-item-text">
+                  Passionné par la tech en général : veille technologique, configuration de homelab et projets personnels.
+                </p>
               </div>
             </li>
 
